tests/negative/import_fn_shadow.far
fun helper() -> i64 { return 1 }

import perf as helper

fun main() -> i64 {
  return helper()
}
